--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
+    "joi": "^17.11.0",
     "nodemon": "^3.0.2"
   }
 }
