--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
+    "cookie-session": "^2.0.0",
     "joi": "^17.11.0",
     "nodemon": "^3.0.2"
   }
