--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "stripe": "^14.10.0"
   },
   "devDependencies": {
     "cookie-session": "^2.0.0",
