--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi-password": "^4.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "stripe": "^14.10.0"
