--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "cross-env NODE_ENV=production nodemon src/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/server.js",
     "build": "npm i"
   },
   "keywords": [],
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "cookie-session": "^2.0.0",
+    "cross-env": "^7.0.3",
     "joi": "^17.11.0",
     "nodemon": "^3.0.2"
   }
