--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node src/server.js",
+    "start": "nodemon src/server.js",
     "dev": "cross-env NODE_ENV=development nodemon src/server.js",
     "build": "npm i"
   },
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -24,7 +25,6 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "cookie-session": "^2.0.0",
     "cross-env": "^7.0.3",
     "joi": "^17.11.0",
     "nodemon": "^3.0.2"
